# signal

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  sample.CMakeUserPresets.json
cmake/: signalConfig.cmake.in
src/: CMakeLists.txt  Sample.cpp  Sample.h  connection.hpp  scoped_connection.hpp  sg.hpp  signal.hpp  signal_base.hpp  signal_fwd.hpp
tests/: CMakeLists.txt  SampleTest.cpp  SignalTest.cpp
